--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -113,9 +113,9 @@
                                         <a href="{% url 'blog_app:blog_list' %}"
                                            class="{% if request.resolver_match.url_name == 'blog_app:blog_list' %}active{% endif %}">وبلاگ</a>
                                     </li>
-                                    {% comment %}<li class="ml-3">
+                                    <li class="ml-3">
                                         <a href="{% url 'main_app:about_us_page' %}">درباره ما</a>
-                                    </li>{% endcomment %}
+                                    </li>
                                     <li class="ml-3">
                                         <a href="{% url 'main_app:contact_us_page' %}">تماس با ما</a>
                                     </li>
