--- a/account_app/templates/account_app/users_authentication/login.html
+++ b/account_app/templates/account_app/users_authentication/login.html
@@ -30,7 +30,7 @@
                                 <div class="input-box">
                                     <label class="label-text">ایمیل</label>
                                     <div class="form-group">
-                                        <input class="form-control form--control" type="text" name="email"
+                                        <input class="form-control form--control" type="text" name="email_or_admin"
                                                placeholder="ایمیل یا نام کاربری">
                                         <span class="la la-user input-icon"></span>
                                     </div>
