--- a/blog_app/templates/blog_app/blog_list_page.html
+++ b/blog_app/templates/blog_app/blog_list_page.html
@@ -1,6 +1,8 @@
 {% extends 'shared/_layout.html' %}
 {% load static %}
 {% load render_partial %}
+{% load shamsi_tags %}
+ 
 
 {% block title %}لیست مقالات{% endblock %}
 
