--- a/blog_app/templates/blog_app/includes/article.html
+++ b/blog_app/templates/blog_app/includes/article.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load shamsi_tags %}
+
 <div class="col-lg-6">
     <div class="card card-item">
         <div class="card-image">
@@ -6,7 +8,7 @@
                 <img class="card-img-top lazy" src="{{ article.image.url }}" alt="درپوش تصویر کارت" style="">
             </a>
             <div class="course-badge-labels">
-                <div class="course-badge">{{ article.create_date }}</div>
+                <div class="course-badge">{{ article.create_date|to_shamsi }}</div>
             </div>
         </div>
         <!-- end card-image -->
