--- a/media_app/templates/media_app/lecture_List_page.html
+++ b/media_app/templates/media_app/lecture_List_page.html
@@ -1,5 +1,6 @@
 {% extends 'shared/_layout.html' %}
 {% load static %}
+{% load shamsi_tags %}
 
 {% block title %}سخنرانی ها{% endblock %}
 
@@ -554,7 +555,7 @@
                                     <img class="card-img-top lazy" src="{{ lecture.image.url }}"
                                          alt="درپوش تصویر کارت" style="">
                                     <div class="course-badge-labels">
-                                        <div class="course-badge">{{ lecture.created_date }}</div>
+                                        <div class="course-badge">{{ lecture.created_date|to_shamsi }}</div>
                                     </div>
                                 </a>
 
@@ -577,155 +578,6 @@
 
                         </div>
                     {% endfor %}
-
-                    {% comment %}<div class="card card-item card-preview card-item-list-layout">
-                        <div class="card-image">
-                            <a href="course-details.html" class="d-block">
-                                <img class="card-img-top lazy" src="{% static 'images/img8.jpg' %}"
-                                     alt="درپوش تصویر کارت" style="">
-                            </a>
-                            <div class="course-badge-labels">
-                                <div class="course-badge">کتاب پرفروش</div>
-                                <div class="course-badge blue">-39٪</div>
-                            </div>
-                        </div>
-                        <!-- end card-image -->
-                        <div class="card-body">
-                            <h6 class="ribbon ribbon-blue-bg fs-14 mb-3">همه مراحل</h6>
-                            <h5 class="card-title"><a href="course-details.html">دوره تحلیلگر هوش تجاری 1400</a></h5>
-                            <p class="card-text"><a href="teacher-detail.html">خوزه پورتیلا</a></p>
-                            <div class="rating-wrap d-flex align-items-center py-2">
-                                <div class="review-stars">
-                                    <span class="rating-number">4.4</span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star-o"></span>
-                                </div>
-                                <span class="rating-total pl-1">(20230)</span>
-                            </div>
-                            <!-- end rating-wrap -->
-                            <div class="d-flex justify-content-between align-items-center">
-                                <p class="card-price text-black font-weight-bold">12.99 <span
-                                        class="before-price font-weight-medium">129.99</span></p>
-                                <div class="icon-element icon-element-sm shadow-sm cursor-pointer"
-                                     title="به لیست علاقه مندی ها اضافه کنید"><i class="la la-heart-o"></i></div>
-                            </div>
-                        </div>
-                        <!-- end card-body -->
-                    </div>
-                    <div class="card card-item card-preview card-item-list-layout">
-                        <div class="card-image">
-                            <a href="course-details.html" class="d-block">
-                                <img class="card-img-top lazy" src="{% static 'images/img8.jpg' %}"
-                                     alt="درپوش تصویر کارت" style="">
-                            </a>
-                            <div class="course-badge-labels">
-                                <div class="course-badge">کتاب پرفروش</div>
-                                <div class="course-badge blue">-39٪</div>
-                            </div>
-                        </div>
-                        <!-- end card-image -->
-                        <div class="card-body">
-                            <h6 class="ribbon ribbon-blue-bg fs-14 mb-3">همه مراحل</h6>
-                            <h5 class="card-title"><a href="course-details.html">دوره تحلیلگر هوش تجاری 1400</a></h5>
-                            <p class="card-text"><a href="teacher-detail.html">خوزه پورتیلا</a></p>
-                            <div class="rating-wrap d-flex align-items-center py-2">
-                                <div class="review-stars">
-                                    <span class="rating-number">4.4</span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star-o"></span>
-                                </div>
-                                <span class="rating-total pl-1">(20230)</span>
-                            </div>
-                            <!-- end rating-wrap -->
-                            <div class="d-flex justify-content-between align-items-center">
-                                <p class="card-price text-black font-weight-bold">12.99 <span
-                                        class="before-price font-weight-medium">129.99</span></p>
-                                <div class="icon-element icon-element-sm shadow-sm cursor-pointer"
-                                     title="به لیست علاقه مندی ها اضافه کنید"><i class="la la-heart-o"></i></div>
-                            </div>
-                        </div>
-                        <!-- end card-body -->
-                    </div>
-                    <div class="card card-item card-preview card-item-list-layout">
-                        <div class="card-image">
-                            <a href="course-details.html" class="d-block">
-                                <img class="card-img-top lazy" src="{% static 'images/img8.jpg' %}"
-                                     alt="درپوش تصویر کارت" style="">
-                            </a>
-                            <div class="course-badge-labels">
-                                <div class="course-badge">کتاب پرفروش</div>
-                                <div class="course-badge blue">-39٪</div>
-                            </div>
-                        </div>
-                        <!-- end card-image -->
-                        <div class="card-body">
-                            <h6 class="ribbon ribbon-blue-bg fs-14 mb-3">همه مراحل</h6>
-                            <h5 class="card-title"><a href="course-details.html">دوره تحلیلگر هوش تجاری 1400</a></h5>
-                            <p class="card-text"><a href="teacher-detail.html">خوزه پورتیلا</a></p>
-                            <div class="rating-wrap d-flex align-items-center py-2">
-                                <div class="review-stars">
-                                    <span class="rating-number">4.4</span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star-o"></span>
-                                </div>
-                                <span class="rating-total pl-1">(20230)</span>
-                            </div>
-                            <!-- end rating-wrap -->
-                            <div class="d-flex justify-content-between align-items-center">
-                                <p class="card-price text-black font-weight-bold">12.99 <span
-                                        class="before-price font-weight-medium">129.99</span></p>
-                                <div class="icon-element icon-element-sm shadow-sm cursor-pointer"
-                                     title="به لیست علاقه مندی ها اضافه کنید"><i class="la la-heart-o"></i></div>
-                            </div>
-                        </div>
-                        <!-- end card-body -->
-                    </div>
-                    <div class="card card-item card-preview card-item-list-layout">
-                        <div class="card-image">
-                            <a href="course-details.html" class="d-block">
-                                <img class="card-img-top lazy" src="{% static 'images/img8.jpg' %}"
-                                     alt="درپوش تصویر کارت" style="">
-                            </a>
-                            <div class="course-badge-labels">
-                                <div class="course-badge">کتاب پرفروش</div>
-                                <div class="course-badge blue">-39٪</div>
-                            </div>
-                        </div>
-                        <!-- end card-image -->
-                        <div class="card-body">
-                            <h6 class="ribbon ribbon-blue-bg fs-14 mb-3">همه مراحل</h6>
-                            <h5 class="card-title"><a href="course-details.html">دوره تحلیلگر هوش تجاری 1400</a></h5>
-                            <p class="card-text"><a href="teacher-detail.html">خوزه پورتیلا</a></p>
-                            <div class="rating-wrap d-flex align-items-center py-2">
-                                <div class="review-stars">
-                                    <span class="rating-number">4.4</span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star"></span>
-                                    <span class="la la-star-o"></span>
-                                </div>
-                                <span class="rating-total pl-1">(20230)</span>
-                            </div>
-                            <!-- end rating-wrap -->
-                            <div class="d-flex justify-content-between align-items-center">
-                                <p class="card-price text-black font-weight-bold">12.99 <span
-                                        class="before-price font-weight-medium">129.99</span></p>
-                                <div class="icon-element icon-element-sm shadow-sm cursor-pointer"
-                                     title="به لیست علاقه مندی ها اضافه کنید"><i class="la la-heart-o"></i></div>
-                            </div>
-                        </div>
-                        <!-- end card-body -->
-                    </div>{% endcomment %}
 
                     {% if is_paginated %}
                         <div class="text-center pt-3">
