--- a/media_app/templates/media_app/lecture_detail_page.html
+++ b/media_app/templates/media_app/lecture_detail_page.html
@@ -1,5 +1,6 @@
 {% extends 'shared/_layout.html' %}
 {% load static %}
+{% load shamsi_tags %}
 
 {% block title %}
     سخنرانی
@@ -143,7 +144,7 @@
                                                     <span class="la la-star"></span>
                                                 </div>
                                             </div>
-                                            <span class="d-block lh-18 pb-2">یک ماه قبل</span>
+                                            <span class="d-block lh-18 pb-2">dsd</span>
                                             <p class="pb-2">این یکی از بهترین دوره هایی است که من در Udemy گذرانده ام.
                                                 این بسیار کامل است و باعث شده است که در مورد پایگاه های داده جاوا و SQL
                                                 نیز به یادگیری ادامه دهید.</p>
